--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "^16.3.2",
     "react-bootstrap": "^0.32.1",
     "react-dom": "^16.3.2",
+    "react-oauth-flow": "^1.1.1",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
     "react-toastify": "^4.0.0-rc.5",
