--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "animated": "^0.2.2",
     "axios": "^0.18.0",
     "bootstrap": "^4.1.0",
+    "cookies-js": "^1.2.3",
     "keymirror": "^0.1.1",
     "react": "^16.3.2",
     "react-bootstrap": "^0.32.1",
