--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
     "animated": "^0.2.2",
     "axios": "^0.18.0",
     "bootstrap": "^4.1.0",
+    "chart.js": "^1.1.1",
     "cookies-js": "^1.2.3",
     "keymirror": "^0.1.1",
     "react": "^16.3.2",
     "react-bootstrap": "^0.32.1",
+    "react-chartjs": "^1.2.0",
     "react-dom": "^16.3.2",
     "react-oauth-flow": "^1.1.1",
     "react-redux": "^5.0.7",
